  "Set Printing Universes" is activated,
- Support for option "[id1 ... idn]", and "-[id1 ... idn]", for the 
  "compute"/"cbv" reduction strategy, respectively meaning reduce only, or 
  everything but, the constants id1 ... idn. "lazy" alone or followed by
  "[id1 ... idn]", and "-[id1 ... idn]" also supported, meaning apply
  all of beta-iota-zeta-delta, possibly restricting delta.

Libraries (DOC TO CHECK)

- New arithmetical libraries:
  - Numbers contains an abstract modular development of natural and integer
    arithmetics.
  - Ints contains a library of efficient computational bounded and
    unbounded integers that can be mapped to processor native arithmetics.
- Library IntMap, subsumed by FSets/FMaps, has been removed from 
  Coq Standard Library and moved into a user contribution Cachan/IntMap
- Better computational behavior of some constants (eq_nat_dec and 
  le_lt_dec more efficient, Z_lt_le_dec and Positive_as_OT.compare 
  transparent, ...) (exceptional source of incompatibilities).
- Boolean operators moved from module Bool to module Datatypes (may need
  to rename qualified references in script)
- Improvements to NArith (Nminus, Nmin, Nmax), and to QArith (in particular 
  a better power function). 
- In SetoidList, eqlistA now expresses that two lists have similar elements 
  at the same position, while the predicate previously called eqlistA 
  is now equivlistA (this one only states that the lists contain the same 
  elements, nothing more). 
- In ListSet, a few definitions are now in Type (may induce a few
  incompatibilities).
- Changes in FSets/FMaps:
  - Improvements: in particular FMap now provides an induction principle 
    on maps, and some properties about FSets and fold needs less hypotheses.
    The polymorphic parameter for the fold function is now in Type. 
  - Loading FSets/FMap used to open unwanted scopes of integer datatypes 
    (see bug #1347). These scopes may need to be opened manually now.